<resources>
    <string name="app_name">FitManager</string>
    <string name="squats">深蹲</string>
    <string name="pushup">俯卧撑</string>
    <string name="situp">仰卧起坐</string>
    <string name="squats_tips">"— 启用横向模式\n— 运动过程中双手将手机水平放置到胸前"</string>
    <string name="pushup_tips">"— 把手机放在地上\n— 将脸贴近手机屏幕或用鼻尖接触屏幕"</string>
    <string name="situp_tips">"— 启用横向模式\n— 运动过程中双手将手机水平放置到胸前"</string>
    <string name="program_style">今日计划</string>
    <string name="free_style">自由模式</string>
    <string name="choose_program">选择训练项目</string>
    <string name="next_training_day">下一训练日：</string>
    <string name="training_program">训练计划</string>
    <string name="count_per_group">每组计划（个）</string>
    <string name="group_size">分组数量（个）</string>
    <string name="group_interval">组间间隔（秒）</string>
    <string name="training_day">训练日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="finished_count">已完成</string>
    <string name="time_count">总时长</string>
    <string name="finished_average">日均训练量</string>
    <string name="training_tips">训练指引</string>
    <string name="do_not_show_later">不再显示此信息</string>
    <string name="go_on">继续</string>
    <string name="finished">已完成</string>
    <string name="finish_today">本日训练计划已完成！</string>
</resources>
