<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.cyl.fitmanager.Fragment.TrainConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/training_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/training_program"
                android:textColor="@color/gray" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/count_per_group"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/group_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="10"
                        android:textColor="@color/gray" />
                </TableRow>

                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/group_size"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/group_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="3"
                        android:textColor="@color/gray" />
                </TableRow>

                <TableRow
                    android:gravity="center"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/group_interval"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/group_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="30"
                        android:textColor="@color/gray" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="45dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/training_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/training_day"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/training_day_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/monday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/tuesday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/wednesday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/thursday"
                    android:textSize="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/training_day_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/friday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/saturday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/sunday"
                    android:textSize="8dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
