<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/skyblue">

        <TextView
            android:id="@+id/program_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12pt"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/program_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_normal_selector"
            android:text="@string/program_style" />

        <Button
            android:id="@+id/free_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_normal_selector"
            android:text="@string/free_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_training_day"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/next_training_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/training_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/training_program"
                android:textColor="@color/gray" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/count_per_group"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/group_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="10"
                        android:textColor="@color/gray" />
                </TableRow>

                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/group_size"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/group_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="3"
                        android:textColor="@color/gray" />
                </TableRow>

                <TableRow
                    android:gravity="center"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/group_interval"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/group_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="30"
                        android:textColor="@color/gray" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="45dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/training_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/training_day"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/training_day_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/monday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/tuesday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/wednesday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/thursday"
                    android:textSize="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/training_day_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/friday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/saturday"
                    android:textSize="8dp" />

                <Button
                    android:id="@+id/training_day_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_training_day_unselected"
                    android:minHeight="1dp"
                    android:minWidth="1dp"
                    android:text="@string/sunday"
                    android:textSize="8dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greengray">

            <Button
                android:id="@+id/previous_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_previous_month_selector"
                android:padding="5dp" />

            <TextView
                android:id="@+id/training_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/forward_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_forward_month_selector"
                android:padding="5dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/finish_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/finished_count"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/month_counts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="125"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/time_count"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/month_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="00:20:15"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/finished_average"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/average_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="12"
                    android:textColor="@color/gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/training_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>